Fix: Touch, Compact icon align #14

--- a/userChrome.css
+++ b/userChrome.css
@@ -556,6 +556,11 @@
     padding-block: 0.25em !important; /* Original: 0.5em */
   }
 
+  /** Panel - View ************************************************************/
+  :root #appMenu-popup panelview {
+    width: 25em !important; /* can modify panel width, Original: 22.5em */
+  }
+
   /** Panel - Icons ***********************************************************/
   /* Padding */
   :root {
@@ -563,8 +568,14 @@
     --arrowpanel-menuimageblank-padding: calc(var(--arrowpanel-menuitem-padding) - 2px) !important;
 
     /* Blank Menu Left Padding */
-    --arrowpanel-menuimageblank-padding-horizontal: calc(var(--arrowpanel-menublank-padding) - 3px) !important;
-    --arrowpanel-menuitemblank-padding: calc(var(--arrowpanel-menuitem-padding) + 1px) !important;
+    --arrowpanel-menuimageblank-padding-horizontal: calc(var(--arrowpanel-menublank-padding) - 3px);
+    --arrowpanel-menuitemblank-padding: calc(var(--arrowpanel-menuitem-padding) + 1px);
+  }
+  :root[uidensity=compact] {
+    --arrowpanel-menuimageblank-padding-horizontal: calc(var(--arrowpanel-menublank-padding) - 5px);
+  }
+  :root[uidensity=touch] {
+    --arrowpanel-menuimageblank-padding-horizontal: calc(var(--arrowpanel-menublank-padding));
   }
 
   .subviewbutton > .toolbarbutton-text {
